busesDao, buses.js, server.js und swagger.js angepasst (endpoints und route hinzugefuegt)
